// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable aggregate 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: top;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c5 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
    <tfoot
      className=""
    >
      <tr
        className="c3"
      >
        <td
          className="c10"
        >
          <div
            className="c11"
          />
        </td>
        <td
          className="c10"
        >
          <div
            className="c11"
          >
            <span
              className="c6"
            >
              3
            </span>
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`DataTable basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c5 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable empty 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3"
      />
    </thead>
    <tbody
      className=""
    />
  </table>
</div>
`;

exports[`DataTable footer 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: top;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c5 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3"
      >
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
    <tfoot
      className=""
    >
      <tr
        className="c3"
      >
        <td
          className="c10"
        >
          <div
            className="c11"
          >
            <span
              className="c9"
            >
              Total
            </span>
          </div>
        </td>
        <td
          className="c10"
        >
          <div
            className="c11"
          />
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`DataTable groupBy 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: rgba(0,0,0,0.33);
  stroke: rgba(0,0,0,0.33);
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding: 6px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c12 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  width: 48px;
  max-width: 48px;
  overflow: hidden;
  vertical-align: top;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c10 {
  font-size: 18px;
  line-height: 24px;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c5:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c9 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c13 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c13 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c13 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  class="c0"
>
  <table
    class="c1 c2"
  >
    <thead
      class=""
    >
      <tr
        class="c3"
      >
        <td
          class="c4"
        >
          <button
            aria-label="expand"
            class="c5"
            type="button"
          >
            <div
              class="c6"
            >
              <svg
                aria-label="FormDown"
                class="c7"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="c8"
          scope="col"
        >
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              A
            </span>
          </div>
        </th>
        <th
          class="c8"
          scope="col"
        >
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class="c3"
      >
        <td
          class="c4"
        >
          <button
            aria-label="expand"
            class="c5"
            type="button"
          >
            <div
              class="c11"
            >
              <svg
                aria-label="FormDown"
                class="c7"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="c12"
          scope="row"
        >
          <div
            class="c13"
          >
            <span
              class="c10"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="c12"
        >
          <div
            class="c13"
          />
        </td>
      </tr>
      <tr
        class="c3"
      >
        <td
          class="c4"
        >
          <button
            aria-label="expand"
            class="c5"
            type="button"
          >
            <div
              class="c11"
            >
              <svg
                aria-label="FormDown"
                class="c7"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="c12"
          scope="row"
        >
          <div
            class="c13"
          >
            <span
              class="c10"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="c12"
        >
          <div
            class="c13"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable groupBy 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <table
    class="StyledDataTable-xrlyjm-0 tpKnu StyledTable-sc-1m3u5g-6 fGUmP"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-xrlyjm-3 bAIczD StyledTable__StyledTableHeader-sc-1m3u5g-4 dHaGyd"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 ezpFws StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezoiKY"
        >
          <button
            aria-label="expand"
            class="StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 gFEOoP"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 eoTmgW"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 folWQp"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              A
            </span>
          </div>
        </th>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 folWQp"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-xrlyjm-2 hbZQKY StyledTable__StyledTableBody-sc-1m3u5g-3 dwInxx"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 ezpFws StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezoiKY"
        >
          <button
            aria-label="expand"
            class="StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 emftoK"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 eoTmgW"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          />
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 ezpFws StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezoiKY"
        >
          <button
            aria-label="expand"
            class="StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 emftoK"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 eoTmgW"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable primaryKey 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c5 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <span
              className="c6"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c3"
      >
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              one
            </span>
          </div>
        </td>
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              1
            </span>
          </div>
        </th>
      </tr>
      <tr
        className="c3"
      >
        <td
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c6"
            >
              two
            </span>
          </div>
        </td>
        <th
          className="c7"
          scope="row"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              2
            </span>
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable resizeable 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  padding: 0px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-right: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 0px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c10 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c12 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  cursor: col-resize;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c6 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    border-right: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding: 0px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  className="c0"
>
  <table
    className="c1 c2"
  >
    <thead
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <span
                className="c7"
              >
                A
              </span>
            </div>
            <div
              className="c8 c9"
              onMouseDown={[Function]}
            />
          </div>
        </th>
        <th
          className="c4"
          scope="col"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <span
                className="c7"
              >
                B
              </span>
            </div>
            <div
              className="c8 c9"
              onMouseDown={[Function]}
            />
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="c3"
      >
        <th
          className="c10"
          scope="row"
        >
          <div
            className="c11"
          >
            <span
              className="c12"
            >
              one
            </span>
          </div>
        </th>
        <td
          className="c10"
        >
          <div
            className="c11"
          >
            <span
              className="c7"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="c3"
      >
        <th
          className="c10"
          scope="row"
        >
          <div
            className="c11"
          >
            <span
              className="c12"
            >
              two
            </span>
          </div>
        </th>
        <td
          className="c10"
        >
          <div
            className="c11"
          >
            <span
              className="c7"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable sort 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  width: 100%;
  height: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
  vertical-align: bottom;
}

.c9 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c3 {
  height: 100%;
}

.c2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c8 {
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c6:hover {
  background-color: rgba(221,221,221,0.4);
  color: #444444;
  color: #000000;
}

.c5 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  height: 100%;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

@media only screen and (max-width:768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media all and (min--moz-device-pixel-ratio:0) {
  .c2 {
    table-layout: fixed;
  }
}

<div
  class="c0"
>
  <table
    class="c1 c2"
  >
    <thead
      class=""
    >
      <tr
        class="c3"
      >
        <th
          class="c4"
          scope="col"
        >
          <button
            class="c5 c6"
            type="button"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                A
              </span>
            </div>
          </button>
        </th>
        <th
          class="c4"
          scope="col"
        >
          <button
            class="c5 c6"
            type="button"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                B
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class="c3"
      >
        <th
          class="c9"
          scope="row"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              zero
            </span>
          </div>
        </th>
        <td
          class="c9"
        >
          <div
            class="c10"
          >
            <span
              class="c8"
            >
              0
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="c9"
          scope="row"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="c9"
        >
          <div
            class="c10"
          >
            <span
              class="c8"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="c9"
          scope="row"
        >
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="c9"
        >
          <div
            class="c10"
          >
            <span
              class="c8"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable sort 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eUfLDp"
>
  <table
    class="StyledDataTable-xrlyjm-0 tpKnu StyledTable-sc-1m3u5g-6 fGUmP"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-xrlyjm-3 bAIczD StyledTable__StyledTableHeader-sc-1m3u5g-4 dHaGyd"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 ezpFws StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-fzr2yb-0 bVTNxY StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fAhsMq"
            >
              <span
                class="StyledText-sc-1sadyjn-0 fWSbXS"
              >
                A
              </span>
              .c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 6px;
}

<div
                class="c0"
              />
              .c0 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c0 g {
  fill: inherit;
  stroke: inherit;
}

.c0 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c0 *[stroke*="#"],
.c0 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c0 *[fill-rule],
.c0 *[FILL-RULE],
.c0 *[fill*="#"],
.c0 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

<svg
                aria-label="FormDown"
                class="c0"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </th>
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 hNAgVv"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-fzr2yb-0 bVTNxY StyledButton-sc-323bzc-0 gSzznR"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fAhsMq"
            >
              <span
                class="StyledText-sc-1sadyjn-0 fWSbXS"
              >
                B
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-xrlyjm-2 hbZQKY StyledTable__StyledTableBody-sc-1m3u5g-3 dwInxx"
    >
      .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c0 {
  height: 100%;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<tr
        class="c0"
      >
        <th
          class="c1"
          scope="row"
        >
          <div
            class="c2"
          >
            <span
              class="c3"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="c1"
        >
          <div
            class="c2"
          >
            <span
              class="c4"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-xrlyjm-1 ezpFws StyledTable__StyledTableRow-sc-1m3u5g-2 kXgizX"
      >
        <th
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
          scope="row"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bnqisW"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-sc-1m3u5g-0 ezepRo"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eAAZJM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fWSbXS"
            >
              2
            </span>
          </div>
        </td>
      </tr>
      .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: 100%;
}

.c0 {
  height: 100%;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<tr
        class="c0"
      >
        <th
          class="c1"
          scope="row"
        >
          <div
            class="c2"
          >
            <span
              class="c3"
            >
              zero
            </span>
          </div>
        </th>
        <td
          class="c1"
        >
          <div
            class="c2"
          >
            <span
              class="c4"
            >
              0
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
